--- a/examples/demo.html
+++ b/examples/demo.html
@@ -28,6 +28,7 @@
       setTimeout(function(){
         map.addControl(new L.Control.SwitchScaleControl({
           updateWhenIdle: true,
+          scales: [1000, 2000, 5000, 10000, 25000, 50000, 100000, 200000, 500000, 1000000, 2500000, 5000000, 10000000, 25000000]
         }));
       }, 1000);
     </script>
