:boom: Add option to split the scale or not

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -41,7 +41,7 @@
         recalcOnZoomChange: true,
         scales: [500, 1000, 2000, 5000, 10000, 25000, 50000, 100000, 200000, 500000, 1000000, 2500000, 5000000, 10000000],
         roundScales: null,
-        adjustScales: false
+        adjustScales: true
     };
 
       
